--- a/index.html
+++ b/index.html
@@ -70,16 +70,16 @@
 
             if (imc < 18.5) {
                 clasificacion = "Bajo peso";
-                snack = "Una barra de frutos secos o un batido de proteínas.";
+                snack = "Presiona 01 - Una barra de frutos secos o un batido de proteínas.";
             } else if (imc >= 18.5 && imc < 24.9) {
                 clasificacion = "Peso normal";
                 snack = "Una fruta o un yogurt light.";
             } else if (imc >= 25 && imc < 29.9) {
                 clasificacion = "Sobrepeso";
-                snack = "Frutos secos o galletas integrales + agua.";
+                snack = " Presiona 02 - Frutos secos o galletas integrales + agua.";
             } else {
                 clasificacion = "Obesidad";
-                snack = "Una botella de agua y evitar snacks calóricos.";
+                snack = "Presiona 03 - Una botella de agua y evitar snacks calóricos.";
             }
 
             resultadoDiv.innerHTML = "<strong>Tu IMC es:</strong> " + imc.toFixed(2) + "<br>" +
