--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
                 snack = "Presiona 01 - Una barra de frutos secos o un batido de proteínas.";
             } else if (imc >= 18.5 && imc < 24.9) {
                 clasificacion = "Peso normal";
-                snack = "Una fruta o un yogurt light.";
+                snack = "Presiona 02 - Una fruta o un yogurt light.";
             } else if (imc >= 25 && imc < 29.9) {
                 clasificacion = "Sobrepeso";
-                snack = "Presiona 02 - Frutos secos o galletas integrales + agua.";
+                snack = "Presiona 03 - Frutos secos o galletas integrales + agua.";
             } else {
                 clasificacion = "Obesidad";
-                snack = "Presiona 03 - Una botella de agua y evitar snacks calóricos.";
+                snack = "Presiona 04 - Una botella de agua y evitar snacks calóricos.";
             }
 
             resultadoDiv.innerHTML = "<strong>Tu IMC es:</strong> " + imc.toFixed(2) + "<br>" +
