--- a/index.html
+++ b/index.html
@@ -127,16 +127,16 @@
 
       if (imc < 18.5) {
         clasificacion = "Bajo peso";
-        snack = "Presiona cero uno, una barra de granola.";
+        snack = "Presiona 01, una barra de granola.";
       } else if (imc >= 18.5 && imc < 24.9) {
         clasificacion = "Peso normal";
-        snack = "Presiona cero dos, galleta integral.";
+        snack = "Presiona 02, galleta integral.";
       } else if (imc >= 25 && imc < 29.9) {
         clasificacion = "Sobrepeso";
-        snack = "Presiona cero tres, frutos secos sin sal.";
+        snack = "Presiona 03, frutos secos sin sal.";
       } else {
         clasificacion = "Obesidad";
-        snack = "Presiona cero cuatro, fruta deshidratada sin azúcar.";
+        snack = "Presiona 04, fruta deshidratada sin azúcar.";
       }
 
       ultimoMensaje = `Tu índice de masa corporal es ${imc.toFixed(2)}. Clasificación: ${clasificacion}. Snack recomendado: ${snack}`;
